--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -909,7 +909,7 @@ section {
   margin-top: 15px;
   font-size: 20px;
   font-weight: 900;
-  color: #493c3e;
+  color: #e43c5c;
 }
 
 .pricing .box h4 {
@@ -943,6 +943,7 @@ section {
 
 .pricing .box ul li {
   padding-bottom: 16px;
+  font-weight: bold;
 }
 
 .pricing .box ul i {
