--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -357,9 +357,39 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url('../img/hero-bg.jpg') top center;
+  background: url('../img/bg/hero-bg.jpg') top center;
   background-size: cover;
   position: relative;
+  animation: image-transition 30s infinite;
+}
+@keyframes image-transition {
+  0% {
+    background-image: url('../img/bg/hero-bg.jpg');
+  }
+  12.5% {
+    background-image: url('../img/bg/digital1.jpg');
+  }
+  25% {
+    background-image: url('../img/bg/digital2.jpg');
+  }
+  37.5% {
+    background-image: url('../img/bg/digital3.jpg');
+  }
+  50% {
+    background-image: url('../img/bg/digital4.jpg');
+  }
+  62.5% {
+    background-image: url('../img/bg/digital5.jpg');
+  }
+  75% {
+    background-image: url('../img/bg/digital6.jpg');
+  }
+  87.5% {
+    background-image: url('../img/bg/digital7.jpg');
+  }
+  100% {
+    background-image: url('../img/bg/hero-bg.jpg');
+  }
 }
 
 #hero:before {
